--- a/styles.css
+++ b/styles.css
@@ -2,61 +2,72 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins",sans-serif;
 }
-.hero__section {
+.hero__section{
     background-image: url(./images/heroSectionBackground.png);
     min-height: 60vh;
     background-size: cover;
     background-position: center;
-    color: white;
 }
 .navbar{
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 60px;
-    padding: 15px 45px;
+    padding: 15px 40px;
 }
 .navbar a{
     color: white;
     text-decoration: none;
 }
-.navbar__menu_container{
+.navbar__menu__container{
     display: flex;
     gap: 20px;
 }
-.navbar__menu_container .user__icon{
+.navbar__menu__container .user__icon{
     height: 30px;
     width: 30px;
-    border-radius: 100%;
     border: 1px solid white;
-    align-items: center;
+    border-radius: 100%;
     justify-content: center;
+    align-items: center;
     display: none;
 }
-
+.hero__section_container h1{
+    color: white;
+}
 .hero__section_container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 32px;
-    height: calc(60vh, 60px);
+    height: calc(60vh,60px);
 }
+/* Dont use Both width and Height at same time because it has some ratio properties */
 .hero__section_logo{
     width: 200px;
-    /* height: 100px; */
-    /* height: auto; */
+    height: auto;
 }
 
 
 
 
 
-@media only screen and (max-width:500px){
-    .navbar__menu_container .user__icon{
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width:500px) {
+    .navbar__menu__container .user__icon{
         display: flex;
+
     }
     .link{
         display: none;
@@ -67,4 +78,5 @@
     .navbar{
         padding: 16px;
     }
-} 
+    
+}
