This is the complete Day-1 Banner Section CSS

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,35 @@
     width: 200px;
     height: auto;
 }
+.hero__section_title{
+    text-align: center;
+    font-size: 25px;
+    font-weight: 400;
+}
+.hero__section_input_container{
+    background-color: white;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 50%;
+    border-radius: 10px;
+}
+.input_container_location , .input_container_search{
+    padding: 6px;
+    border: none;
+    /* border-radius: 15px; */
+    width: 96%;
+    /* outline: none; */
+}
+.input_container_location{
+    width: 35%;
+    border-right: 2px solid gray;
+}
+.input_container_search{
+    width: 65%;
+}
 
 
 
@@ -78,5 +107,22 @@
     .navbar{
         padding: 16px;
     }
-    
+    .hero__section_input_container{
+        flex-direction: column;
+        background-color: transparent;
+        width: 100%;
+    }
+    .input_container_location , .input_container_search{
+        padding: 15px;
+        border-radius: 10px;
+        width: 95%;
+    }
+    .hero__section_container{
+        height: calc(80vh - 60px);
+    }
+    .hero__section_title{
+        font-size: 20px;
+        width: 95%;
+    }
 }
+
