--- a/styles.css
+++ b/styles.css
@@ -177,5 +177,88 @@
 }
 .we__offer_content p{
     font-size: 12px;
+    
+}
+
+/* Day-3 Collection Section */
+
+.collections h1{
+    font-weight: 500;
+}
+.collections .sub__heading_container{
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+/* Here we can access the child by using nth child and using 2 */
+.sub__heading_container span:nth-child(2){
+    color: #ff7e8b;
+    font-size: 13px;
+    cursor: pointer;
+}
+.collections_card_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-top: 1.5rem;
+}
+
+.collections_card_container .card{
+    height: 300px;
+    min-width: 240px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    position: relative;
+}
+
+.card1{
+    background-image: url(./images/collection1.jpg);
+}
+.card2{
+    background-image: url(./images/collection2.jpg);
+}
+.card3{
+    background-image: url(./images/collection3.jpg);
+}
+.card4{
+    background-image: url(./images/collection4.jpg);
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* linear gradient==>New Concept
+    if we choose 0 bottom to top
+    and if we give 90 right to left */
+    border-radius: 10px;
+    background: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.8) 0%,
+        rgba(0,0,0,0.05) 50%,
+        rgba(0,0,0,0.05) 80%
+      
+    );
+}
+.collections_card_container .card .content{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: white;
+    padding: 12px 16px;
+    font-size: 0.8rem;
+}
+
+.content h4{
+    font-weight: 400;
+    letter-spacing: 0.5px;
 }
 
